--- a/site.yaml
+++ b/site.yaml
@@ -42,5 +42,5 @@ sorter:
     index:
         attr: meta.index
         filters:
-            source_file.kind: htm
+            source_file.kind: html
      
