--- a/info.yaml
+++ b/info.yaml
@@ -1,3 +1,3 @@
-author: Lakshmi Vyasarajan
-description: A basic layout for hyde. Based on html5 boilerplate
+author: Jim Faes
+description: A basic layout for hyde. Based on html5 boilerplate & started from the basic hyde repo
 version: 0.1
